# ehleho

./: .gitignore  README.md  main.py  popup.py  pyproject.toml
history/: __init__.py
lib/: __init__.py  alert.py  error.py  korean.py
